ingress/argocd-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  virtualhost:
    fqdn: argocd.shukawam.me
  routes:
    - services:
        - name: argocd-server
          port: 443
