ingress/influx-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: influxdb-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  virtualhost:
    fqdn: influxdb.shukawam.me
  routes:
    - services:
        - name: influxdb
          port: 8086
