ingress/kiali-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kiali
  namespace: istio-system
spec:
  virtualhost:
    fqdn: kiali.shukawam.me
  routes:
    - services:
        - name: kiali
          port: 9090
